# UroSeg

./: README.md  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
docs/superpowers/plans/: 2026-06-20-uroseg-plan1-foundation.md  2026-06-20-uroseg-plan2-utility-commands.md  2026-06-20-uroseg-plan3-training-readme.md  2026-06-23-uroseg-tss-utils-parity.md  2026-06-24-uroseg-cli-ux.md  2026-06-25-uroseg-model-definition.md  2026-06-27-uroseg-inmemory-api-and-pipeline.md  2026-06-27-uroseg-predict-pipeline-redesign.md  2026-06-27-uroseg-public-redesign.md
docs/superpowers/specs/: 2026-06-20-uroseg-design.md  2026-06-23-uroseg-tss-utils-parity.md  2026-06-24-uroseg-cli-ux.md  2026-06-25-uroseg-model-definition.md  (+3 more)
tests/: conftest.py  test_cli.py  test_commands.py  test_image.py  test_inference.py  test_install.py  test_models.py  test_public_api.py  test_train.py  test_utils.py  test_volume.py
uroseg/: __init__.py  __main__.py  cli.py  models.py
uroseg/commands/: cpdir.py  crop_image2seg.py  inference.py  install.py  largest_component.py  list_models.py  map_labels.py  predict_nnunet.py  preview_jpg.py  reorient_canonical.py  resample.py  train.py  train_nnunet.py  transform_seg2image.py
uroseg/models/: __init__.py  base.py  bladder.py  prostate.py
uroseg/nnunet/: helpers.py  predict.py  train.py
uroseg/tools/: __init__.py  cpdir.py  crop.py  largest_component.py  list_models.py  map_labels.py  preview.py  reorient.py  resample.py  transform_seg2image.py  volume.py
uroseg/utils/: image.py  inference_utils.py  utils.py
(+5 files in other folders)
