[build-system]
requires = ["setuptools>=67", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "uroseg"
dynamic = ["version"]
requires-python = ">=3.10"
description = "Automated segmentation of urological anatomy from medical images"
license = {text = "MIT"}
dependencies = [
    "tqdm",
    "numpy",
    "nibabel",
    "scipy",
    "pillow",
    "SimpleITK",
    "auglab @ git+https://github.com/neuropoly/AugLab.git@r20260615",
    "nnunetv2",
]

[project.scripts]
uroseg = "uroseg.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"uroseg.resources.auglab" = ["*.json"]

[tool.setuptools_scm]
